--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,9 @@ dependencies:
   firebase_database: ^10.0.6
   geolocator: ^9.0.2
   tracking: ^0.0.1
+  google_fonts: ^2.0.0
+  fl_chart: ^0.35.0
+
 
 
   flutter:
