--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
   cloud_firestore: ^4.1.0
   firebase_storage: ^11.0.6
   cloud_functions: ^4.0.5
+  intl:
 
   shared_preferences: ^2.0.15
   progress_dialog:
