--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,8 +53,45 @@ dependencies:
   font_awesome_flutter:
   carousel_slider:
   floating_action_bubble:
+  flutter_rating_bar: ^4.0.1
+  image_picker_for_web: ^2.1.6
+  uuid: ^3.0.6
+  flutter_staggered_grid_view: ^0.4.1
+  percent_indicator: ^4.2.2
+  animations: ^2.0.0
+  image: ^3.0.2
+  path_provider: ^2.0.2
+  geocoding: ^2.0.0
+  timeago: ^3.1.0
+  image_cropper: ^3.0.0
+  ionicons: ^0.2.1
+  loading_overlay: ^0.3.0
+  like_button: ^2.0.4
+  flutter_chat_bubble: ^2.0.0
+  permission_handler: ^10.1.0
+  story: ^0.8.0
+  story_view: ^0.14.0
+  custom_navigation_bar:
+  eva_icons_flutter:
+  page_transition:
+  pull_to_refresh:
+  flutter_launcher_icons:
+  line_icons:
+  dotted_border:
 
 
+
+
+
+
+  flare_flutter:
+  transparent_image:
+  time_machine:
+  flutter_slidable:
+  flutter_secure_storage:
+  firebase_messaging:
+
+  characters:
 
 
 
